--- a/Content.Client/UserInterface/Systems/MenuBar/Widgets/GameTopMenuBar.xaml
+++ b/Content.Client/UserInterface/Systems/MenuBar/Widgets/GameTopMenuBar.xaml
@@ -13,18 +13,18 @@
            VerticalAlignment="Top"
            SeparationOverride="0"
 >
-    <BoxContainer Orientation="Horizontal">
+    <BoxContainer Orientation="Horizontal" SeparationOverride="5">
+
         <ui:MenuButton
             Name="EscapeButton"
             Access="Internal"
             Icon="{xe:Tex '/Textures/Interface/hamburger.svg.192dpi.png'}"
             BoundKey = "{x:Static ic:EngineKeyFunctions.EscapeMenu}"
             ToolTip="{Loc 'game-hud-open-escape-menu-button-tooltip'}"
-            MinSize="96 32"
+            MinSize="70 64"
             HorizontalExpand="True"
             AppendStyleClass="{x:Static style:StyleBase.ButtonOpenRight}"
         />
-
 
         <ui:MenuButton
             Name="EmotesButton"
@@ -32,7 +32,7 @@
             Icon="{xe:Tex '/Textures/Interface/emotes.svg.192dpi.png'}"
             ToolTip="{Loc 'game-hud-open-emotes-menu-button-tooltip'}"
             BoundKey = "{x:Static is:ContentKeyFunctions.OpenEmotesMenu}"
-            MinSize="96 32"
+            MinSize="42 64"
             HorizontalExpand="True"
             AppendStyleClass="{x:Static style:StyleBase.ButtonSquare}"
         />
@@ -43,7 +43,7 @@
             Icon="{xe:Tex '/Textures/Interface/VerbIcons/information.svg.192dpi.png'}"
             ToolTip="{Loc 'game-hud-open-guide-menu-button-tooltip'}"
             BoundKey = "{x:Static is:ContentKeyFunctions.OpenGuidebook}"
-            MinSize="96 32"
+            MinSize="42 64"
             HorizontalExpand="True"
             AppendStyleClass="{x:Static style:StyleBase.ButtonSquare}"
         />
@@ -54,7 +54,7 @@
             Icon="{xe:Tex '/Textures/Interface/character.svg.192dpi.png'}"
             ToolTip="{Loc 'game-hud-open-character-menu-button-tooltip'}"
             BoundKey = "{x:Static is:ContentKeyFunctions.OpenCharacterMenu}"
-            MinSize="96 32"
+            MinSize="42 64"
             HorizontalExpand="True"
             AppendStyleClass="{x:Static style:StyleBase.ButtonSquare}"
         />
@@ -64,19 +64,17 @@
             Icon="{xe:Tex '/Textures/Interface/hammer.svg.192dpi.png'}"
             BoundKey = "{x:Static is:ContentKeyFunctions.OpenCraftingMenu}"
             ToolTip="{Loc 'game-hud-open-crafting-menu-button-tooltip'}"
-            MinSize="96 32"
+            MinSize="42 64"
             HorizontalExpand="True"
-            AppendStyleClass="{x:Static style:StyleBase.ButtonOpenRight}"
+            AppendStyleClass="{x:Static style:StyleBase.ButtonSquare}"
             />
-    </BoxContainer>
-    <BoxContainer Orientation="Horizontal">
         <ui:MenuButton
             Name="ActionButton"
             Access="Internal"
             Icon="{xe:Tex '/Textures/Interface/fist.svg.192dpi.png'}"
             BoundKey = "{x:Static is:ContentKeyFunctions.OpenActionsMenu}"
             ToolTip="{Loc 'game-hud-open-actions-menu-button-tooltip'}"
-            MinSize="96 32"
+            MinSize="42 64"
             HorizontalExpand="True"
             AppendStyleClass="{x:Static style:StyleBase.ButtonSquare}"
             />
@@ -86,7 +84,7 @@
             Icon="{xe:Tex '/Textures/Interface/gavel.svg.192dpi.png'}"
             BoundKey = "{x:Static is:ContentKeyFunctions.OpenAdminMenu}"
             ToolTip="{Loc 'game-hud-open-admin-menu-button-tooltip'}"
-            MinSize="96 32"
+            MinSize="42 64"
             HorizontalExpand="True"
             AppendStyleClass="{x:Static style:StyleBase.ButtonSquare}"
             />
@@ -95,8 +93,8 @@
             Access="Internal"
             Icon="{xe:Tex '/Textures/Backmen/Interface/language.png'}"
             BoundKey = "{x:Static is:ContentKeyFunctions.OpenLanguageMenu}"
-            ToolTip="Open the Language Menu"
-            MinSize="96 32"
+            ToolTip="{Loc 'game-hud-open-language-menu-button-tooltip'}"
+            MinSize="42 64"
             HorizontalExpand="True"
             AppendStyleClass="{x:Static style:StyleBase.ButtonSquare}"
         />
@@ -106,7 +104,7 @@
             Icon="{xe:Tex '/Textures/Interface/sandbox.svg.192dpi.png'}"
             BoundKey = "{x:Static is:ContentKeyFunctions.OpenSandboxWindow}"
             ToolTip="{Loc 'game-hud-open-sandbox-menu-button-tooltip'}"
-            MinSize="96 32"
+            MinSize="42 64"
             HorizontalExpand="True"
             AppendStyleClass="{x:Static style:StyleBase.ButtonSquare}"
             />
@@ -116,7 +114,7 @@
             Icon="{xe:Tex '/Textures/Interface/info.svg.192dpi.png'}"
             BoundKey = "{x:Static is:ContentKeyFunctions.OpenAHelp}"
             ToolTip="{Loc 'ui-options-function-open-a-help'}"
-            MinSize="96 32"
+            MinSize="42 64"
             HorizontalExpand="True"
             AppendStyleClass="{x:Static style:StyleBase.ButtonOpenLeft}"
             />
