--- a/Content.Client/Audio/Jukebox/JukeboxMenu.xaml
+++ b/Content.Client/Audio/Jukebox/JukeboxMenu.xaml
@@ -1,18 +1,35 @@
 <ui:FancyWindow xmlns="https://spacestation14.io" xmlns:ui="clr-namespace:Content.Client.UserInterface.Controls"
-                SetSize="400 500" Title="{Loc 'jukebox-menu-title'}">
+                SetSize="600 500" Title="{Loc 'jukebox-menu-title'}">
     <BoxContainer Margin="4 0" Orientation="Vertical">
         <ItemList Name="MusicList" SelectMode="Button" Margin="3 3 3 3"
         HorizontalExpand="True" VerticalExpand="True" SizeFlagsStretchRatio="8"/>
         <BoxContainer Orientation="Vertical">
             <Label Name="SongSelected" Text="{Loc 'jukebox-menu-selectedsong'}" />
-            <Label Name="SongName" Text="---" />
+            <!-- Europa-Edit-Start -->
+            <BoxContainer Orientation="Horizontal" HorizontalExpand="True"
+                          VerticalExpand="False" SizeFlagsStretchRatio="1">
+                <Label Name="SongName" Text="---" />
+                <Label Name="DurationLabel" Text="00:00 / 00:00" HorizontalAlignment="Right" HorizontalExpand="True"/>
+            </BoxContainer>
+            <!-- Added Interface to change the music volume in Jukebox.
+                Added volume slider and Volume label to show the volume -->
             <Slider Name="PlaybackSlider" HorizontalExpand="True" />
+            <Label Name="VolumeNumberLabel" Text="0" HorizontalAlignment="Right" HorizontalExpand="True"/>
+            <BoxContainer Orientation="Horizontal" HorizontalExpand="True"
+                          VerticalExpand="False" SizeFlagsStretchRatio="1">
+                <Label Name="VolumeLabel" Text="{Loc 'jukebox-menu-volume'} " />
+                <Slider Name="VolumeSlider" HorizontalExpand="True" />
+            <!-- Added volume slider and volume label -->
+            </BoxContainer>
         </BoxContainer>
-        <BoxContainer Orientation="Horizontal" HorizontalExpand="True"
-        VerticalExpand="False" SizeFlagsStretchRatio="1">
-            <Button Name="PlayButton" Text="{Loc 'jukebox-menu-buttonplay'}" />
-            <Button Name="StopButton" Text="{Loc 'jukebox-menu-buttonstop'}" />
-            <Label Name="DurationLabel" Text="00:00 / 00:00" HorizontalAlignment="Right" HorizontalExpand="True"/>
+        <BoxContainer Orientation="Vertical">
+            <PanelContainer StyleClasses="LowDivider" />
+            <BoxContainer Orientation="Horizontal" HorizontalExpand="True"
+                          VerticalExpand="False" SizeFlagsStretchRatio="1" HorizontalAlignment="Center">
+                <Button Name="PlayButton" Text="{Loc 'jukebox-menu-buttonplay'}" />
+                <Button Name="StopButton" Text="{Loc 'jukebox-menu-buttonstop'}" />
+            </BoxContainer>
         </BoxContainer>
+        <!-- Europa-Edit-End-->
     </BoxContainer>
 </ui:FancyWindow>
